--- a/core/templates/core/vue/status-tutorial.html
+++ b/core/templates/core/vue/status-tutorial.html
@@ -6,6 +6,8 @@
       <p>
         This is <b>BETA</b>, and there are still a lot of work to be done.<br>
       </p>
+      <h5>This page is pretty slow right now, please do not be mad at him and <b>PLEASE DON't SPAM BUTTONS</b> :(</h5>
+      <h5><b>ALSO THIS IS OUTDATED AT THE MOMENT, WILL SOON UPDATE</b></h5>
       <br>
       <h5>So, what is this and why do I need this in my life?</h5>
       <p>
@@ -24,14 +26,7 @@
         <b>1. Updated within last two weeks.</b><br>
         <b>2. Related to sequencings with mismatching number of lanes to requested lane number.</b><br>
         <b>3. Library has to be post-2019</b><br><br>
-        But let's say you want to create your own list.<br>
-        Then simply click  <md-icon>add</md-icon> located in lower left corner. <br>
-        This will take you to <b>ProjectTag</b> create page.<br>
-        <b>ProjectTag</b> is a new model we came up with. It currently only has 2 fields: Title and samples. 
-        You set the title and add all the samples you want to attach, then the table will be populated with all the analyses 
-        attached to that samples.<br>
-        Similarly, use <md-icon>remove</md-icon> to remove <b>ProjectTag</b>.<br>
-        It does not auto refresh at the moment.
+        Or you can chose <b>Project</b> from left pannel.<br>
       </p>
       <br>
       <h5>Your table is weird and ugly, and I do not understand it</h5>
@@ -49,6 +44,7 @@
       <br>
       <h6>Give me Filter</h6>
       <p>
+        <b>FILTER IS CURRENTLY DISABLED SORRY</b>
         Analysis Status table offers some basic filtering functions. Try clicking<br>
         <md-button>Filter <md-icon>filter_list</md-icon></md-button> 
         to see what options of filters are avaliable.<br>
