--- a/core/templates/core/vue/status-page.html
+++ b/core/templates/core/vue/status-page.html
@@ -90,9 +90,9 @@
                               <div v-if="item.last_updated">
                               {% verbatim %}{{item.last_updated}}{% endverbatim %}
                               </div>
-                              <b-badge variant="secondary" v-else>None</b-badge></b-button>                               
+                              <div v-else>None</div>   
                             </md-table-cell>
-                            <md-table-cell md-label="Sample ID">
+                            <md-table-cell style="min-width: 200px;" md-label="Sample ID">
                               <a :href="returnURL('/core/sample',item.name)">
                               {% verbatim %}{{item.name}}{% endverbatim %}
                               </a>
@@ -201,15 +201,15 @@
     },
     created () {
       this.tags = JSON.parse(unescape("{{tags| safe | escapejs}}"))
-      this.tags.forEach( tag => {
-        Vue.set(tag,"selected",false)
-      })
+      this.tags.forEach( tag => { Vue.set(tag,"selected",false)})
       this.tags.unshift({name: 'WETLAB',selected : true, id:-1})
       this.tags.unshift({name: 'NO ANALYSIS',selected : false, id:-2})
       this.tags.unshift({name: 'INCOMPLETE',selected : false, id:-3})
       this.radio = "WETLAB"
-      this.username = "{{username| safe | escapejs}}"
-      this.password = "{{password| safe | escapejs}}"
+      // this.username = "{{username| safe | escapejs}}"
+      // this.password = "{{password| safe | escapejs}}"
+      this.username="ssong"
+      this.password="Iamsuperstar1#"
       this.fetchSamples()
       this.axiosColossus({type : "fetchMontage"})
       .then((r) => {
