--- a/core/templates/core/vue/status-page.html
+++ b/core/templates/core/vue/status-page.html
@@ -9,8 +9,7 @@
             <span class="md-title">Analysis Status {% verbatim %}{{radio}}{% endverbatim %}</span>
             <md-button  @click="showDialog = true">Guide <md-icon>contact_support</md-icon></md-button>
             {% include "core/vue/status-tutorial.html" %}
-            <md-button @click="showFilter =true" disabled>Filter <md-icon>filter_list</md-icon></md-button>
-            <md-progress-spinner v-if="loading" :md-diameter="30" :md-stroke="3" md-mode="indeterminate"></md-progress-spinner>
+            <md-button @click="showFilter =true">Filter <md-icon>filter_list</md-icon></md-button>
             <md-dialog :md-active.sync="showFilter">
                 <md-dialog-title>Filter Table</md-dialog-title>
                 <md-dialog-content> 
@@ -28,22 +27,14 @@
                     </div>
                   <md-dialog-actions>
                       <md-button class="md-primary" @click="resetFilter">Reset</md-button>
-                      <md-button class="md-primary" @click="applyFilter = true">Apply</md-button>
+                      <md-button class="md-primary" @click="triggerFilter">Apply</md-button>
                       <md-button class="md-primary" @click="showFilter = false">Close</md-button>
                   </md-dialog-actions>
                 </md-dialog-content>
             </md-dialog>
-            <md-dialog-alert
-            :md-active.sync="showLaneMessage"
-            md-content="Everything is bit <b>SLOW</b>. But he is trying his best. <br>
-                        <b>WETLAB</b> and <b>NO ANALYSIS</b> view displays lane info related to Library, not analysis.<br> 
-                        <b>Filter</b> is currently <b>Disabled.</b><br>
-                        <b>Sorting by date</b> is currently Disabled.<br>
-                        <b>Guide</b> is Outdated.
-                        "
-            md-confirm-text="Cool!" />
+            <md-progress-spinner v-if="loading" :md-diameter="30" :md-stroke="3" md-mode="indeterminate"></md-progress-spinner>
+            <md-chip v-if="applyFilter" class="md-accent">Filter Applied</md-chip>
           </md-app-toolbar>
-          
           <md-app-drawer md-permanent="full">
             <md-list class="md-double-line" style="height: 100vh;">
               <md-subheader>Welcome Stranger!</md-subheader>
@@ -74,81 +65,12 @@
                   <br />
                   <div class="sample-table">
                       <md-button @click="indexIncrement(false)"><md-icon>keyboard_arrow_left</md-icon></md-button>
-                      <md-button disabled>{% verbatim %}{{index + 1}}{% endverbatim %}/{% verbatim %}{{pages}}{% endverbatim %}</md-button>
-                      <md-button @click="indexIncrement(true)"><md-icon>keyboard_arrow_right</md-icon></md-button>
-                      <md-chip v-if="applyFilter" class="md-accent">Filter Applied</md-chip>
-                      <md-button disabled>Total: {% verbatim %}{{total}}{% endverbatim %}</md-button>
+                      <md-button disabled>{% verbatim %}{{index + 1}}{% endverbatim %}/{% verbatim %}{{(applyFilter) ?  searchPage : pages}}{% endverbatim %}</md-button>
+                      <md-button @click="indexIncrement(true)"><md-icon>keyboard_arrow_right</md-icon></md-button>  
+                      <md-button v-if="applyFilter" disabled>Search Total: {% verbatim %}{{searchTotal}}{% endverbatim %}</md-button>
+                      <md-button v-else disabled>Total: {% verbatim %}{{total}}{% endverbatim %}</md-button>
                       <md-table v-model="pagination" md-fixed-header md-height="calc(80vh - 40px)" md-sort="submitted" md-sort-order="asc">
-                          <md-table-row slot="md-table-row" slot-scope="{ item }" :style="item.imported">
-                            <md-table-cell class="ln140" md-label="Requested" >
-                              <div v-if="item.submission">
-                                {% verbatim %}{{item.submission}}{% endverbatim %}
-                              </div>
-                              <div v-else>None</div>                              
-                            </md-table-cell>
-                            <md-table-cell md-label="Updated">
-                              <div v-if="item.last_updated">
-                              {% verbatim %}{{item.last_updated}}{% endverbatim %}
-                              </div>
-                              <div v-else>None</div>   
-                            </md-table-cell>
-                            <md-table-cell style="min-width: 200px;" md-label="Sample ID">
-                              <a :href="returnURL('/core/sample',item.name)">
-                              {% verbatim %}{{item.name}}{% endverbatim %}
-                              </a>
-                            </md-table-cell>
-                            <md-table-cell md-label="Library">
-                              <div v-if="item.library">
-                                <a :href="returnURL('/dlp/library',item.library)">
-                                {% verbatim %}{{item.library}}{% endverbatim %}
-                                </a>
-                              </div>
-                              <b-badge variant="secondary" v-else>N/A</b-button>                              
-                            </md-table-cell>                            
-                            <md-table-cell md-label="Analysis">
-                              <div v-if="item.jira">
-                                <a href="returnJiraURL(item.jira)">
-                                {% verbatim %}{{item.jira}}{% endverbatim %}
-                                </a>
-                              </div>
-                              <b-badge variant="secondary" v-else>N/A</b-button>                              
-                            </md-table-cell>
-                            <md-table-cell md-label="Montage">
-                              <div v-if="item.montage">
-                                <a :href="returnMontageURL(item.jira)"> Link </a>
-                              </div>
-                              <b-badge variant="secondary" v-else>N/A</b-button>
-                            </md-table-cell>
-                            <md-table-cell  md-label="Version">
-                              <div v-if="item.version">
-                                {% verbatim %}{{item.version}}{% endverbatim %}
-                              </div>
-                              <b-badge variant="secondary" v-else>N/A</b-button>
-                            </md-table-cell>
-                            <md-table-cell md-label="Aligner">
-                              <div v-if="item.aligner">
-                                {% verbatim %}{{item.aligner}}{% endverbatim %}
-                              </div>
-                              <b-badge variant="secondary" v-else>N/A</b-button>
-                            </md-table-cell>
-                            <md-table-cell md-label="Lanes">  
-                              <div v-if="item.lanes" variant="primary">
-                                {% verbatim %}{{item.lanes}}{% endverbatim %}
-                              </div>
-                              <b-badge  variant="secondary" v-else>N/A</b-badge>
-                            </md-table-cell>
-                            <md-table-cell style="min-width: 180px;" md-label="Pipeline">
-                              <div>
-                                <b-badge :variant="item.pipeline.align">align</b-badge>
-                                <b-badge :variant="item.pipeline.hmmcopy">hmmcopy</b-badge>
-                                <b-badge :variant="item.pipeline.qc">QC</b-badge>
-                              </div>
-                            </md-table-cell>
-                            <md-table-cell md-label="Pseudobulk">
-                              <b-badge :variant="item.pipeline.pseudo">pseudobulk</b-badge>
-                            </md-table-cell>
-                          </md-table-row>
-                        </md-table-row>
+                          {% include "core/vue/status-row.html" %}
                       </md-table>
                   </div>
                   <br />
@@ -157,38 +79,35 @@
         </md-app>
       </div>
   </div>
-{% include "core/vue/status-row.html" %}
-<script>
+
+<script>  
   const PAGINATION = 100
   var vm = new Vue({
     el: '#app',
     components:{
-      Row
     },
     data: {
       //  Pop up
       test : [],
       showDialog: false,
-      showFilter: false,
-      showLaneMessage: true,
       // Search
       searchQuery: {
         key : "",
         submission: null,
         updated: null,
       },
+      showFilter: false,
       applyFilter: false,
-      searchTotal: 0,
-      searchIndex: 0,
-      searchPage: 1,
       searchIndexes: [],
+      searchPage : 0,
+      searchTotal : 0,
       // Auth
       username: "",
       password: "",
       // 
       samples: [],
       tags: [],
-      radio: "D",
+      radio: "WETLAB",
       montages: [],
       montage_ready: false,
       searchTag: "",
@@ -205,7 +124,6 @@
       this.tags.unshift({name: 'WETLAB',selected : true, id:-1})
       this.tags.unshift({name: 'NO ANALYSIS',selected : false, id:-2})
       this.tags.unshift({name: 'INCOMPLETE',selected : false, id:-3})
-      this.radio = "WETLAB"
       this.username = "{{username| safe | escapejs}}"
       this.password = "{{password| safe | escapejs}}"
       this.fetchSamples()
@@ -213,82 +131,70 @@
       .then((r) => {
         this.montage_ready=true
         this.montages = r
-        this.updateSampleMontage()
+        this.triggerUpdateSampleMontage()
       })
     },
     computed: {
       tagDisplay() {
         return this.tags.filter(tag => {return tag.title.toLowerCase().includes(this.searchTag.toLowerCase())})
       },
-      rowDisplay() {
-        return this.samples.filter(sample => {
-          query = true
-          if (this.searchQuery.submission)
-            if(sample.submission) query &= (this.searchQuery.submission.toISOString().split('T')[0] === sample.submission)
-            else return false
-          if (this.searchQuery.updated)
-            if(sample.last_updated) query &= (this.searchQuery.updated.toISOString().split('T')[0] === sample.last_updated)
-            else return false
-          if(this.searchQuery.key)
-            query &= (sample.library + sample.name + ((sample.jira) ? sample.jira : "")).toLowerCase().includes(this.searchQuery.key.toLowerCase())
-          return query
-        })
-      },
       pagination() {
-        if(this.applyFilter) {
-          this.showFilter=false
-          if(this.searchIndexes.length <= 0){
-            this.searchIndexes = this.samples.reduce((acc, curr, index) => {
-              query = true
-              if (this.searchQuery.submission)
-                if(curr.submission) query &= (this.searchQuery.submission.toISOString().split('T')[0] === curr.submission)
-                else return false
-              if (this.searchQuery.updated)
-                if(curr.last_updated) query &= (this.searchQuery.updated.toISOString().split('T')[0] === curr.last_updated)
-                else return false
-              if(this.searchQuery.key)
-                query &= (curr.library + curr.name + ((curr.jira) ? curr.jira : "")).toLowerCase().includes(this.searchQuery.key.toLowerCase())
-              if(query) acc.push(index)
-              return acc
-            },[])          
-            this.searchTotal = this.searchIndexes.length
-            this.searchPage = Math.ceil((this.searchTotal)/PAGINATION) 
-          }
-          this.searchIndexes.forEach((i) => {this.computeRow(i)})   
-          var last = this.searchIndexes*PAGINATION + PAGINATION 
-          var display_indexes = this.searchIndexes.slice(this.searchIndexes*PAGINATION, (last < this.searchTotal ) ? last : this.searchTotal)
-          return display_indexes.reduce((acc,curr) => {
-            acc.push(this.samples[curr])
-            return acc
-          },[])
-        }
-        
         var last = this.index*PAGINATION + PAGINATION
-        var j = ((last < this.total ) ? last : this.total)
-        for(var i = this.index*PAGINATION ; i < j; i++){
-          this.computeRow(i)
+        var total = (this.applyFilter) ? this.searchTotal : this.total
+        var j = ((last < total ) ? last : total)
+        if (this.applyFilter){
+          if (this.searchTotal.length = 0) return []
+          var displayList = []
+          for(var i = this.index*PAGINATION ; i < j; i++) {
+            this.computeRow(this.searchIndexes[i])
+            displayList.push(this.samples[this.searchIndexes[i]])
+          }
+          return displayList
         }
-        return this.samples.slice(this.index*PAGINATION, last)
+        else {
+          for(var i = this.index*PAGINATION ; i < j; i++) this.computeRow(i)
+          return this.samples.slice(this.index*PAGINATION, last)
+        }
       },
     },
     methods: {  
       returnURL(type,pk) {
       return window.origin + type + "/" + pk
       },
-      returnJiraURL(jira) {return "//www.bcgsc.ca/jira/browse/" + jira },
-      returnMontageURL(jira) {return "//https://52.235.35.201/?dashboard=" + jira},
+      returnJiraURL(jira) {return "http://www.bcgsc.ca/jira/browse/" + jira },
+      returnMontageURL(jira) {return "http://52.235.35.201/?dashboard=" + jira},
       createTag(){window.location.href = ""},
       // Filter
       resetFilter() {
         this.applyFilter = false
-        this.searchIndexes = []
-        this.searchIndex = 0
-
+        this.searchTotal = -1
+        this.searchPage = 0
+        this.index = 0
         this.searchQuery = {
         key : "",
         submission: null,
         updated: null,
-        completed: [false, false, false, false]}
+        }
+      },
+      triggerFilter() {
+        this.applyFilter = true
+        this.showFilter = true
+        this.index = 0
+        this.searchIndexes = this.samples.reduce((acc, curr, index) => {
+          query = true
+          if (this.searchQuery.submission)
+            if(curr.submission) query &= (this.searchQuery.submission.toISOString().split('T')[0] === curr.submission)
+            else query = false
+          if (this.searchQuery.updated)
+            if(curr.last_updated) query &= (this.searchQuery.updated.toISOString().split('T')[0] === curr.last_updated)
+            else query =  false
+          if(this.searchQuery.key)
+            query &= (curr.library + curr.name + ((curr.jira) ? curr.jira : "")).toLowerCase().includes(this.searchQuery.key.toLowerCase())
+          if(query) acc.push(index)
+          return acc
+            },[])   
+        this.searchTotal = this.searchIndexes.length
+        this.searchPage = Math.ceil((this.searchTotal)/PAGINATION) 
       },
       // 
       computeRow(i) {
@@ -300,7 +206,7 @@
             Vue.set(this.samples[i],  "montage", (this.montages.includes(this.samples[i].jira)))
           }
           if(this.samples[i].jira) {
-            this.axiosVerifyTantalus(this.samples[i])
+            // this.axiosVerifyTantalus(this.samples[i])
             this.axiosVerifyColossus(this.samples[i])
           }
         }      
@@ -336,13 +242,13 @@
         return variant
       },
       fetchSamples () {
+        this.resetFilter()
         this.index = 0
         if(!this.loading){
           this.loading = true
           if(this.radio !== "WETLAB" && this.radio !== "INCOMPLETE" && this.radio !== "NO ANALYSIS") {
             var data =  {"type" : "PROJECTS", "name" : this.radio}}
           else var data =  {"type" : this.radio, "name" : null}
-        
         
           this.axiosColossus(data)
           .then((r) => {
@@ -402,20 +308,12 @@
                 }}).then( (response) => resolve(response.data)).catch( (e) => reject(e))
         })
       },
-      updateSampleMontage() {
-        this.samples.forEach( sample => {
-
+      triggerUpdateSampleMontage() {
+        this.samples.some( sample => {
+          if('montage' in sample) return true
+          Vue.set(sample,  "montage", (this.montages.includes(sample.jira)))
         })
       },
-      axiosVerifyMontage() {
-        this.axiosColossus({type : "fetchMontage"})
-        .then((r) => {
-          this.montage_ready=true
-          this.montages = r
-          this.updateSampleMontage()
-        })
-
-      }
     },
   })
 </script>
